--- a/pages/popup/popup.css
+++ b/pages/popup/popup.css
@@ -6,11 +6,14 @@ body {
 }
 
 header {
-	padding-top: 10;
+	padding-top: 10px;
 }
 
 .container {
-	margin: 20px 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
 }
 
 h1 {
@@ -28,6 +31,9 @@ hr {
 }
 
 button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: #bb86fc;
 	color: #1d1d1d;
 	border: none;
@@ -38,6 +44,7 @@ button {
 }
 
 button i {
+	display: inline;
 	margin-right: 5px;
 }
 
@@ -72,7 +79,11 @@ a:visited {
 
 .caption {
 	text-align: center;
-	font-size: 12;
+	font-size: 12px;
 	padding: 0;
 	margin: 0;
+}
+
+#buttonIcon {
+	margin-right: 8px;
 }
