--- a/pages/complete/complete.css
+++ b/pages/complete/complete.css
@@ -6,16 +6,20 @@ body {
 }
 
 header {
-	padding-top: 10;
+	padding-top: 10px;
 }
 
 .container {
-	margin: 20px 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
 }
 
 #middleContainer {
 	display: flex;
 	flex-direction: column;
+	margin-top: 20px;
 }
 
 #currentRepo {
